fix: dark mode reader modal + mail header display

--- a/pages/style/theme.css
+++ b/pages/style/theme.css
@@ -4,6 +4,7 @@
     --primary-bg: #fff !important;
     --secondary-bg: #5a61690f !important;
     --third-bg: #212529 !important;
+    --fourth-bg: #212529 !important;
     --font-color: #212529 !important;
     --inv-font-color: #fff !important;
     --bg-font-color: #5a6169 !important;
@@ -19,6 +20,7 @@
     --primary-bg: #272727 !important;
     --secondary-bg: #121212 !important;
     --third-bg: #42454b !important;
+    --fourth-bg: #121212 !important;
     --font-color: #e1e1ff !important;
     --inv-font-color: #373a3d !important;
     --bg-font-color: #3a3a3a !important;
